--- a/.gitmodules
+++ b/.gitmodules
@@ -320,9 +320,6 @@
 [submodule "src/github.com/pkg/sftp"]
 	path = src/github.com/pkg/sftp
 	url = https://github.com/pkg/sftp
-[submodule "src/github.com/errors"]
-	path = src/github.com/errors
-	url = https://github.com/go-errors/errors.git
 [submodule "src/github.com/cloudfoundry-incubator/volman"]
 	path = src/github.com/cloudfoundry-incubator/volman
-	url = https://github.com/cloudfoundry-incubator/volman.git
+	url = git@github.com:cloudfoundry-incubator/volman.git
