--- a/.gitmodules
+++ b/.gitmodules
@@ -323,3 +323,6 @@
 [submodule "src/github.com/cloudfoundry-incubator/volman"]
 	path = src/github.com/cloudfoundry-incubator/volman
 	url = git@github.com:cloudfoundry-incubator/volman.git
+[submodule "src/github.com/jessevdk/go-flags"]
+	path = src/github.com/jessevdk/go-flags
+	url = https://github.com/jessevdk/go-flags.git
