--- a/examples/aws/stubs/diego/property-overrides.yml
+++ b/examples/aws/stubs/diego/property-overrides.yml
@@ -1,23 +1,23 @@
 property_overrides:
   bbs:
-    active_key_label: ACTIVE_KEY_LABEL
+    active_key_label: REPLACE_ME_WAITH_ACTIVE_KEY_LABEL
     encryption_keys:
-      - label: ACTIVE_KEY_LABEL
-        passphrase: "A SECURE PASSPHRASE"
+      - label: REPLACE_ME_WAITH_ACTIVE_KEY_LABEL
+        passphrase: REPLACE_ME_WITH_A_SECURE_PASSPHRASE
     # require_ssl: false
 
     # If require_ssl is set to false, the following certs and keys must be set
     # to nil.
     ca_cert: |
-      BBS_CA_CERT
+      REPLACE_ME_WITH_(DEPLOYMENT_DIR/certs/diego-ca.crt)
     client_cert: |
-      BBS_CLIENT_CERT
+      REPLACE_ME_WITH_(DEPLOYMENT_DIR/certs/bbs-certs/client.crt)
     client_key: |
-      BBS_CLIENT_KEY
+      REPLACE_ME_WITH_(DEPLOYMENT_DIR/certs/bbs-certs/client.key)
     server_cert: |
-      BBS_SERVER_CERT
+      REPLACE_ME_WITH_(DEPLOYMENT_DIR/certs/bbs-certs/server.crt)
     server_key: |
-      BBS_SERVER_KEY
+      REPLACE_ME_WITH_(DEPLOYMENT_DIR/certs/bbs-certs/server.key)
     log_level: debug
   etcd:
     heartbeat_interval_in_milliseconds: 200
@@ -27,21 +27,21 @@ property_overrides:
     # if require_ssl and peer_require_ssl are set to false, the following certs
     # and keys must be set to nil.
     ca_cert: |
-      ETCD_CA_CERT
+      REPLACE_ME_WITH_(DEPLOYMENT_DIR/certs/diego-ca.crt)
     server_cert: |
-      ETCD_SERVER_CERT
+      REPLACE_ME_WITH_(DEPLOYMENT_DIR/certs/etcd-certs/server.crt)
     server_key: |
-      ETCD_SERVER_KEY
+      REPLACE_ME_WITH_(DEPLOYMENT_DIR/certs/etcd-certs/server.key)
     client_cert: |
-      ETCD_CLIENT_CERT
+      REPLACE_ME_WITH_(DEPLOYMENT_DIR/certs/etcd-certs/client.crt)
     client_key: |
-      ETCD_CLIENT_KEY
+      REPLACE_ME_WITH_(DEPLOYMENT_DIR/certs/etcd-certs/client.key)
     peer_ca_cert: |
-      ETCD_PEER_CA_CERT
+      REPLACE_ME_WITH_(DEPLOYMENT_DIR/certs/etcd-peer-ca.crt)
     peer_cert: |
-      ETCD_PEER_CERT
+      REPLACE_ME_WITH_(DEPLOYMENT_DIR/certs/etcd-certs/peer.crt)
     peer_key: |
-      ETCD_PEER_KEY
+      REPLACE_ME_WITH_(DEPLOYMENT_DIR/certs/etcd-certs/peer.key)
     log_level: debug
   nsync:
     log_level: debug
@@ -70,4 +70,4 @@ property_overrides:
   ssh_proxy:
     enable_cf_auth: true
     host_key: |
-      SSH_PROXY_HOST_KEY
+      REPLACE_ME_WITH_(DEPLOYMENT_DIR/keypair/ssh-proxy-host-key.pem)
