--- a/.gitmodules
+++ b/.gitmodules
@@ -237,7 +237,7 @@
 [submodule "src/github.com/cloudfoundry-incubator/bbs"]
 	path = src/github.com/cloudfoundry-incubator/bbs
 	url = https://github.com/cloudfoundry-incubator/bbs
-	branch = master
+	branch = wip-rdbms
 [submodule "src/github.com/cloudfoundry-incubator/healthcheck"]
 	path = src/github.com/cloudfoundry-incubator/healthcheck
 	url = https://github.com/cloudfoundry-incubator/healthcheck
@@ -276,7 +276,7 @@
 [submodule "src/github.com/cloudfoundry-incubator/benchmark-bbs"]
 	path = src/github.com/cloudfoundry-incubator/benchmark-bbs
 	url = https://github.com/cloudfoundry-incubator/benchmark-bbs
-	branch = master
+	branch = wip-rdbms
 [submodule "src/github.com/aws/aws-sdk-go"]
 	path = src/github.com/aws/aws-sdk-go
 	url = https://github.com/aws/aws-sdk-go
@@ -316,3 +316,6 @@
 [submodule "src/github.com/pkg/sftp"]
 	path = src/github.com/pkg/sftp
 	url = https://github.com/pkg/sftp
+[submodule "src/github.com/go-sql-driver/mysql"]
+	path = src/github.com/go-sql-driver/mysql
+	url = https://github.com/go-sql-driver/mysql
