--- a/.gitmodules
+++ b/.gitmodules
@@ -322,3 +322,6 @@
 [submodule "src/github.com/jessevdk/go-flags"]
 	path = src/github.com/jessevdk/go-flags
 	url = https://github.com/jessevdk/go-flags.git
+[submodule "src/github.com/cloudfoundry-incubator/cephdriver"]
+	path = src/github.com/cloudfoundry-incubator/cephdriver
+	url = git@github.com:cloudfoundry-incubator/cephdriver.git
