--- a/.gitmodules
+++ b/.gitmodules
@@ -164,10 +164,6 @@
 	path = src/github.com/hashicorp/go-multierror
 	url = https://github.com/hashicorp/go-multierror
 	branch = master
-[submodule "src/github.com/cloudfoundry-incubator/cf_http"]
-	path = src/github.com/cloudfoundry-incubator/cf_http
-	url = git@github.com:cloudfoundry-incubator/cf_http.git
-	branch = master
 [submodule "src/github.com/pivotal-golang/clock"]
 	path = src/github.com/pivotal-golang/clock
 	url = https://github.com/pivotal-golang/clock
@@ -325,3 +321,6 @@
 [submodule "src/github.com/cloudfoundry-incubator/cephdriver"]
 	path = src/github.com/cloudfoundry-incubator/cephdriver
 	url = git@github.com:cloudfoundry-incubator/cephdriver.git
+[submodule "src/github.com/cloudfoundry-incubator/cf_http"]
+	path = src/github.com/cloudfoundry-incubator/cf_http
+	url = https://github.com/cloudfoundry-incubator/cf_http
