--- a/.gitmodules
+++ b/.gitmodules
@@ -310,13 +310,13 @@
 	url = https://github.com/pkg/sftp
 [submodule "src/github.com/cloudfoundry-incubator/volman"]
 	path = src/github.com/cloudfoundry-incubator/volman
-	url = git@github.com:cloudfoundry-incubator/volman.git
+	url = https://github.com/cloudfoundry-incubator/volman
 [submodule "src/github.com/jessevdk/go-flags"]
 	path = src/github.com/jessevdk/go-flags
 	url = https://github.com/jessevdk/go-flags.git
 [submodule "src/github.com/cloudfoundry-incubator/cephdriver"]
 	path = src/github.com/cloudfoundry-incubator/cephdriver
-	url = git@github.com:cloudfoundry-incubator/cephdriver.git
+	url = https://cloudfoundry-incubator/cephdriver
 [submodule "src/github.com/cloudfoundry-incubator/cf_http"]
 	path = src/github.com/cloudfoundry-incubator/cf_http
 	url = https://github.com/cloudfoundry-incubator/cf_http
