--- a/scripts/ci/run_unit.build.yml
+++ b/scripts/ci/run_unit.build.yml
@@ -1,7 +1,7 @@
 ---
 platform: linux
 
-image: docker:///cloudfoundry/inigo-ci
+image: docker:///cfdiegodocker/units-ci#dev
 
 inputs:
   - name: diego-release
