--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "src/github.com/cloudfoundry/gunk"]
 	path = src/github.com/cloudfoundry/gunk
 	url = https://github.com/cloudfoundry/gunk
-	branch = master
+	branch = nats-ping-interval
 [submodule "src/github.com/tedsuo/ifrit"]
 	path = src/github.com/tedsuo/ifrit
 	url = https://github.com/tedsuo/ifrit
@@ -68,10 +68,6 @@
 [submodule "src/github.com/bmizerany/pat"]
 	path = src/github.com/bmizerany/pat
 	url = https://github.com/bmizerany/pat
-	branch = master
-[submodule "src/github.com/apcera/nats"]
-	path = src/github.com/apcera/nats
-	url = https://github.com/apcera/nats
 	branch = master
 [submodule "src/github.com/apcera/gnatsd"]
 	path = src/github.com/apcera/gnatsd
@@ -279,7 +275,7 @@
 [submodule "src/code.cloudfoundry.org/route-emitter"]
 	path = src/code.cloudfoundry.org/route-emitter
 	url = https://github.com/cloudfoundry/route-emitter
-	branch = master
+	branch = nats-ping-interval
 [submodule "src/github.com/cloudfoundry-incubator/voldriver"]
 	path = src/github.com/cloudfoundry-incubator/voldriver
 	url = https://github.com/cloudfoundry-incubator/voldriver
@@ -326,4 +322,12 @@
 [submodule "src/github.com/spf13/pflag"]
 	path = src/github.com/spf13/pflag
 	url = https://github.com/spf13/pflag
+	branch = master
+[submodule "src/github.com/nats-io/nats"]
+	path = src/github.com/nats-io/nats
+	url = https://github.com/nats-io/nats
+	branch = master
+[submodule "src/github.com/nats-io/nuid"]
+	path = src/github.com/nats-io/nuid
+	url = https://github.com/nats-io/nuid
 	branch = master
