WIP: Add TLS to auctioneer

--- a/manifest-generation/diego.yml
+++ b/manifest-generation/diego.yml
@@ -488,6 +488,9 @@ properties:
         require_ssl: (( property_overrides.bbs.require_ssl || nil ))
         client_session_cache_size: (( property_overrides.bbs.client_session_cache_size || nil ))
         max_idle_conns_per_host: (( property_overrides.bbs.max_idle_conns_per_host || nil ))
+      ca_cert: (( property_overrides.auctioneer.ca_cert ))
+      server_cert: (( property_overrides.auctioneer.server_cert ))
+      server_key: (( property_overrides.auctioneer.server_key ))
       cell_state_timeout: (( property_overrides.auctioneer.cell_state_timeout || nil ))
       starting_container_weight: (( property_overrides.auctioneer.starting_container_weight || nil ))
       dropsonde_port: (( config_from_cf.metron_agent.dropsonde_incoming_port ))
