wip: added to property overrides, vcap script accepts nil values
Signed-off-by: Joachim Valdez <valdezj@us.ibm.com>

--- a/manifest-generation/bosh-lite-stubs/property-overrides.yml
+++ b/manifest-generation/bosh-lite-stubs/property-overrides.yml
@@ -390,6 +390,10 @@ property_overrides:
   rep:
     evacuation_timeout_in_seconds: 60
     log_level: debug
+    require_tls: false
+    ca_cert: (( nil ))
+    server_cert: (( nil ))
+    server_key: (( nil ))
   route_emitter:
     log_level: debug
   skip_cert_verify: true
