wip: use the new format for uaa scim users

--- a/examples/aws/stubs/cf/properties.yml
+++ b/examples/aws/stubs/cf/properties.yml
@@ -55,7 +55,14 @@ properties:
         secret: REPLACE_WITH_TCP_ROUTER_PASSWORD
     scim:
       users:
-      - admin|REPLACE_WITH_ADMIN_PASSWORD|scim.write,scim.read,openid,cloud_controller.admin,doppler.firehose
+      - name: admin
+        password: REPLACE_WITH_ADMIN_PASSWORD
+        groups:
+        - scim.write
+        - scim.read
+        - openid
+        - cloud_controller.admin
+        - doppler.firehose
   smoke_tests:
     api: REPLACE_WITH_API_DOMAIN
     apps_domain: REPLACE_WITH_APPS_DOMAIN
