--- a/examples/aws/templates/infrastructure/boosh.yml
+++ b/examples/aws/templates/infrastructure/boosh.yml
@@ -103,6 +103,24 @@ subnets:
     route_table:
       instance: NATZ1
 
+  - name: DiegoWindowsZ1
+    cidr: (( merge ))
+    availability_zone: (( merge ))
+    route_table:
+      instance: NATZ1
+
+  - name: DiegoWindowsZ2
+    cidr: (( merge ))
+    availability_zone: (( merge ))
+    route_table:
+      instance: NATZ1
+
+  - name: DiegoWindowsZ3
+    cidr: (( merge ))
+    availability_zone: (( merge ))
+    route_table:
+      instance: NATZ1
+
   - name: Errands
     cidr: (( merge ))
     availability_zone: (( merge ))
